--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://DivzGit.github.io/DP_Portfolio",
   "name": "divya-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.5",
     "divya-portfolio": "file:",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -29,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
